# google-analytics-mcp

./: Dockerfile  Procfile  pyproject.toml
analytics_mcp/: web_server.py
analytics_mcp/tools/: utils.py
